Fix deployment origin and root redirect